fix popover collapse issue, show popover arrow

--- a/grails-app/assets/stylesheets/comparison.css
+++ b/grails-app/assets/stylesheets/comparison.css
@@ -31,6 +31,5 @@ ul.json-dict, ol.json-array {
 }
 
 .popover {
-    max-width: 400px;
-    overflow-x: hidden;
+    max-width: 350px;
 }
